--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,48 @@
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+}
+
+.row,
+section,
+#container-fluid,
+nav,
+footer,
+.rightandleft-slider,
+.responsive-new,
+.width-height-img-slider-top,
+.width-priveat{
+  width: 98% !important;
+  margin-left: 1% !important;
+}
+
+.row,
+section,
+footer,
+.rightandleft-slider,
+.responsive-new,
+.width-height-img-slider-top{
+  overflow: hidden;
+}
+
+.priveat-carousel-prev,
+.priveat-carousel-next{
+  top: 30% !important;
+  bottom: 1% !important;
+  opacity: inherit !important;
+  background-color: #00000047;
+  height: 49px;
+  width: 11% !important;
+  transition: 1s !important;
+  border-radius: 2.5rem;
+}
+
+.priveat-carousel-prev{
+  left: 2% !important;
+}
+
+.priveat-carousel-next{
+  right: 2% !important;
 }
 
 body {
@@ -25,18 +67,23 @@ h6 {
 svg.svg-inline--fa.fa-key,
 svg.svg-inline--fa.fa-handshake,
 svg.svg-inline--fa.fa-star,
-svg.svg-inline--fa.fa-person-chalkboard{
+svg.svg-inline--fa.fa-person-chalkboard {
   font-size: 30px;
 }
 
 svg.svg-inline--fa.fa-heart,
 svg.svg-inline--fa.fa-road,
-svg.change{
+svg.change {
   font-size: 30px !important;
 }
 
+a {
+  text-decoration: none;
+}
 
-a{text-decoration: none;}
+.active, .clicks:hover {
+  background: none !important;
+}
 
 ul,
 ol {
@@ -79,7 +126,7 @@ ul.show {
 }
 
 .dropdown-toggle::after {
-  opacity: 0;
+  display: none;
 }
 
 .vector-img-logo {
@@ -109,12 +156,12 @@ li.width {
 }
 
 div#navbarSupported {
-  width: 50%;
+  width: 33%;
   display: flex;
 }
 
 form#d-flex {
-  width: 50%;
+  width: 33%;
   padding: 0% 3% 0% 0%;
 }
 
@@ -204,17 +251,17 @@ span.span-phone {
   height: 550px;
 }
 
-.imageslider{
+.imageslider {
   width: 100%;
   height: 550px;
-} 
+}
 
 button#gototop {
   width: 4%;
   height: 45px;
   position: fixed;
   bottom: 20px;
-  right: 3px;
+  right: 4px;
   font-size: 25px;
   border: none;
   outline: none;
@@ -229,11 +276,15 @@ button#gototop:hover {
 }
 
 .Words-slider-top {
-  width: 100%;
-  height: 75%;
+  width: 65%;
+  height: 35%;
   position: absolute;
   top: 12%;
-  display: flex;
+  right: 0 !important;
+  left: 10% !important;
+  padding: 0 !important;
+  text-align: initial;
+  display: flex !important;
   align-items: center;
   justify-content: center;
 }
@@ -292,23 +343,23 @@ button#gototop:hover {
   right: 5%;
 }
 
-.Fade {
-  animation-name: Fade;
-  animation-duration: 1.5s;
+.prev-slider,
+.next-slider{
+  top: 50% !important;
+  bottom: 1% !important;
+  opacity: inherit !important;
+  background-color: #00000047;
+  height: 49px;
+  width: 11% !important;
+  transition: 1s !important;
 }
 
-@keyframes Fade {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
+.prev-slider{
+  left: 3% !important;
 }
 
-.active, .clicks:hover {
-  background-color: #717171;
+.next-slider{
+  right: 3% !important;
 }
 
 .footer-bootstrap-v5 {
@@ -386,6 +437,64 @@ svg.svg-inline--fa.fa-twitter,
 svg.svg-inline--fa.fa-instagram {
   font-size: 35px !important;
   color: black !important;
+}
+
+li.width-driver {
+  width: 33%;
+  display: flex;
+  justify-content: center;
+}
+
+.cover-new {
+  background-color: turquoise;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2.5rem;
+  font-size: 19px;
+  color: blue;
+  font-weight: bolder;
+  transition: 1.5s;
+}
+
+.cover-new:hover {
+  background-color: #2197e2;
+}
+
+ul.dirction-new {
+  width: 90%;
+  border-radius: 2.5rem;
+  padding: 3% !important;
+  transform: translate(0 , 47px) !important;
+}
+
+.padding-content {
+  background-color: #21212247;
+  border-radius: 2.5rem;
+  padding: 5%;
+}
+
+.dropdown-item:hover {
+  border-radius: 2.5rem;
+}
+
+a.points-out {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.background-new{
+  background-color: rgba(218, 33, 33, 0.685);
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2.5rem;
+  font-size: 19px;
+  font-weight: bolder;
+  color: white;
 }
 
 .SECTIONONE,
@@ -612,7 +721,7 @@ p.free2-car {
 
 .CLIENTS {
   width: 100%;
-  margin-top: 4%;
+  margin-top: 3%;
 }
 
 .displayCLIENTS {
@@ -620,13 +729,13 @@ p.free2-car {
   margin-left: 0%;
   background-color: #06f5c93b;
   border-radius: 2.5rem;
-  padding: 2% 1%;
+  padding: 0% 1%;
   position: relative;
 }
 
 .Client1-carry {
   text-align: center;
-  margin-bottom: 2%;
+  margin-bottom: 1%;
 }
 
 h1.saysaboutus {
@@ -643,42 +752,52 @@ h5.sayaboutus {
   color: #999;
 }
 
-.margintoclients {
-  width: 95%;
-  margin-left: 2.5%;
-}
-
-.clientsaysaboutus {
+.power-slider {
   width: 100%;
-  text-align: center;
 }
 
-#blay {
-  display: block;
+.power-priveat{
+  position: relative !important;
+  right: 0 !important;
+  left: 0 !important;
+  bottom: 0 !important;
+  display: block !important;
 }
 
-.fade2 {
-  animation-name: fade2;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade2 {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
-}
-
-.imageclients {
+svg.slider-top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+}
+
+.carousel-indicators {
+  margin: 0 !important;
 }
 
 svg.svg-inline--fa.fa-user {
-  font-size: 70px;
-  }
+  font-size: 50px;
+}
+
+.priveat-enmatain-prev,
+.priveat-enmatain-next{
+  top: 30% !important;
+  bottom: 1% !important;
+  opacity: inherit !important;
+  background-color: #00000047;
+  height: 49px;
+  width: 11% !important;
+  transition: 1s !important;
+  border-radius: 2.5rem;
+}
+
+.priveat-enmatain-prev{
+  left: 2% !important;
+}
+
+.priveat-enmatain-next{
+  right: 2% !important;
+}
 
 /* .imgclients {
   width: 22%;
@@ -940,11 +1059,6 @@ section.rides-register-daily {
   width: 75%;
 }
 
-section.Latest-rentals {
-  margin-top: 5%;
-  width: 100%;
-}
-
 .carlatest {
   width: 100%;
   margin-left: 0%;
@@ -1090,11 +1204,6 @@ span.svg-car {
   transform: rotateZ(37deg);
 }
 
-section.Looking-for-ride {
-  margin-top: 8%;
-  width: 100%;
-}
-
 .space.no-top {
   width: 100%;
   margin-left: 0%;
@@ -1192,84 +1301,15 @@ ins.price {
   right: 0;
 }
 
-section.this-brand-car-web {
-  width: 100%;
-  margin-top: 5%;
-  height: 180px;
-  position: relative;
+.width-height-img img{
+  width: 20%;
+  height: auto;
 }
 
-.thisbrand {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 100%;
-}
-
-.thiscar {
-  width: 1210px;
-  height: 100%;
-  display: flex;
+.width-height-img-slider-top{
+  height: auto;
   overflow: hidden;
 }
-
-.thiscar::before,
-.thiscar::after {
-  height: 180px;
-  width: 84px;
-  position: absolute;
-  content: "";
-  background: linear-gradient(to right, #c5bdd573 0%, rgb(119 82 245 / 0%) 100%);
-  z-index: 2;
-}
-
-.thiscar::before {
-  left: 0;
-  top: 0;
-}
-
-.thiscar::after {
-  right: 0;
-  top: 0;
-  transform: rotateZ(180deg);
-}
-
-.thiscarweb {
-  animation: slideshow 11s linear infinite;
-  display: flex;
-  height: 95%;
-  width: calc(250px * 7);
-}
-
-@keyframes slideshow {
-  0% {
-    transform: translateX(0);
-  }
-
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-.slider-brand-car {
-  background-color: #adacd92e;
-  width: 180px;
-  height: 100%;
-  margin-right: 1%;
-  border: 5px solid rgb(208 208 227 / 69%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 2.5rem;
-}
-
-img.brand-car {
-  padding: 1% 1% 1% 1%;
-  width: 91%;
-  height: 100px;
-  border-radius: 10px;
-}
-
 
 section.sectionpage {
   width: 100%;
