--- a/css/responsive.css
+++ b/css/responsive.css
@@ -774,6 +774,10 @@
     display: flex;
   }
 
+  .filter-meta p{
+    width: 85%;
+  }
+
   div#grid-flex-1,
   div#gridflex-1 {
     display: block;
@@ -844,7 +848,7 @@
 
   .flexses123 {
     display: flex;
-    width: 55%;
+    width: 80%;
     justify-content: space-between;
     align-items: center;
   }
@@ -882,12 +886,12 @@
     transition: 0.8s;
   }
 
-  .cars-list figure {
-    width: 80%;
+  .cars-list img {
+    width: 97%;
   }
 
-  .cars-lists figure {
-    width: 59%;
+  .cars-lists img {
+    width: 97%;
   }
 
   .car-inf,
@@ -2050,6 +2054,10 @@
     display: flex;
   }
 
+  .filter-meta li {
+    margin: 4% 0;
+  }
+
   div#grid-flex-1,
   div#gridflex-1 {
     display: block;
@@ -2120,7 +2128,7 @@
 
   .flexses123 {
     display: flex;
-    width: 55%;
+    width: 80%;
     justify-content: space-between;
     align-items: center;
   }
@@ -2158,12 +2166,12 @@
     transition: 0.8s;
   }
 
-  .cars-list figure {
-    width: 74%;
+  .cars-list img {
+    width: 99%;
   }
 
-  .cars-lists figure {
-    width: 56%;
+  .cars-lists img {
+    width: 99%;
   }
 
   .car-inf,
@@ -3467,6 +3475,10 @@
     display: flex;
   }
 
+  .filter-meta li {
+    margin: 2% 0;
+  }
+
   .all-cuntenar {
     display: none;
   }
@@ -3559,12 +3571,8 @@
     padding-left: 8px;
   }
 
-  .cars-list figure {
-    margin: 0;
-    margin-right: 4%;
-    background-color: #6226263b;
-    padding: 1%;
-    width: 70%;
+  .cars-list img {
+    width: 99%;
   }
 
   .kola-met>span {
@@ -3643,17 +3651,8 @@
     width: 95%;
   }
 
-  .cars-lists figure {
-    margin: 0;
-    margin-right: 4%;
-    background-color: #6226263b;
-    padding: 1%;
-    width: 74%;
-  }
-
-  .cars-lists figure img {
-    width: 275px;
-    height: 250px;
+  .cars-lists img  {
+    width: 99%;
   }
 
   .bottom {
@@ -5158,7 +5157,7 @@
     width: 95%;
   }
 
-  .cars-lists figure img {
+  .cars-lists img  {
     width: 275px;
     height: 250px;
   }
@@ -6619,7 +6618,7 @@
     width: 95%;
   }
 
-  .cars-lists figure img {
+  .cars-lists img  {
     width: 275px;
     height: 250px;
   }
@@ -7939,9 +7938,8 @@
     margin-bottom: 3%;
   }
 
-  .cars-list figure {
+  .cars-list img {
     margin: 0;
-    background-color: #6226263b;
     padding: 1%;
     width: 49%;
     margin-left: 2%;
@@ -7996,11 +7994,9 @@
     margin-bottom: 3%;
   }
 
-  .cars-lists figure {
+  .cars-lists img {
     margin: 0;
     margin-right: 4%;
-    background-color: #6226263b;
-    padding: 2%;
     width: 57%;
   }
 
