--- a/css/style.css
+++ b/css/style.css
@@ -1316,11 +1316,6 @@ section.sectionpage {
   margin-top: 5%;
 }
 
-.divpage {
-  width: 100%;
-  display: flex;
-}
-
 .allpage {
   width: 60%;
 }
@@ -1601,7 +1596,6 @@ div#gridflex-1 {
 }
 
 .filtermeta {
-
   border-top: 1px solid pink;
   margin-top: 5%;
   display: flex;
@@ -2407,8 +2401,8 @@ input#party {
   border: 2px solid pink;
   height: 55px;
   width: 85%;
-  background-color: #935ac9;
-  color: yellowgreen;
+  background-color: rgba(137, 43, 226, 0.445);
+  color: blue;
   font-size: 18px;
   padding: 0% 2%;
 }
@@ -2435,12 +2429,11 @@ span.validity {
   border: 3px solid pink;
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 7%;
-  height: 50px;
+  width: 15%;
+  height: 55px;
   font-size: 20px;
-  background-color: #935ac9;
-  color: yellowgreen;
+  background-color: rgba(137, 43, 226, 0.445);
+  color: blue;
 }
 
 p.pp21 {
@@ -2580,17 +2573,15 @@ i.far.fa-check-circle {
   background: #f75f62;
   color: #fff;
 }
-
+/* 
 .cars-list figure img {
   width: 275px;
   height: 250px;
-}
+} */
 
 .cars-list figure {
   margin: 0;
   margin-right: 4%;
-  background-color: #6226263b;
-  padding: 1%;
 }
 
 .car-owner {
@@ -2610,7 +2601,7 @@ i.far.fa-check-circle {
 .more-find {
   display: flex;
   align-items: center;
-  width: 79%;
+  width: 90%;
   justify-content: space-between;
   margin-bottom: 5%;
   padding-left: 30px;
@@ -2656,7 +2647,7 @@ a.slimm:hover {
 }
 
 .carowner {
-  display: block;
+  display: flex;
 }
 
 .bottom {
@@ -2688,7 +2679,7 @@ i.fa-regular.fa-star.fa-beat-fade.fa-sm {
 a.slim {
   background: #7ba8f9;
   color: #fff;
-  width: 20%;
+  width: 25%;
   height: 30px;
   display: flex;
   justify-content: center;
@@ -2708,16 +2699,9 @@ a.slim:hover {
   margin-bottom: 3%;
 }
 
-.cars-lists figure img {
+.cars-lists  img {
   width: 210px;
   height: 250px;
-}
-
-.cars-lists figure {
-  margin: 0;
-  margin-right: 4%;
-  background-color: #6226263b;
-  padding: 1%;
 }
 
 .cars-list {
@@ -2725,6 +2709,11 @@ a.slim:hover {
   align-items: center;
   padding-left: 4%;
   margin-bottom: 3%;
+}
+
+.cars-list  img {
+  width: 210px;
+  height: 250px;
 }
 
 .car-inf {
@@ -2755,8 +2744,9 @@ span.locatio {
   margin-right: 4%;
 }
 
-.owner-thmb img {
+svg.svg-inline--fa.fa-user-tie{
   border-radius: 100%;
+  font-size: 50px;
 }
 
 .car-meta {
