--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ footer,
   cursor: pointer;
 }
 
-.tooltip-slider-hover {
+
+.clickorstop h1 {
   background-color: #333;
   color: #fff;
   position: absolute;
@@ -78,7 +79,7 @@ footer,
   white-space: nowrap;
 }
 
-.tooltip-slider-hover::before {
+.clickorstop h1::before  {
   content: "";
   position: absolute;
   bottom: -20px;
@@ -87,35 +88,15 @@ footer,
   border-style: solid;
   border-width: 10px;
   border-color: #333 transparent transparent;
+  animation: blink 0.7s infinite;
 }
 
 .clickorstop:hover {
   overflow: visible;
 }
 
-.clickorstop:hover .tooltip-slider-hover {
+.clickorstop:hover h1 {
   opacity: 1;
-  animation: control-width 3s steps(28) 2s both, blink 0.5s infinite;
-
-@keyframes control-width {
-  from {
-      width: 0;
-  }
-
-  to {
-      width: 418px;
-  }
-}
-
-@keyframes blink {
-  from {
-      border-right-color: rgb(255 255 255 / 80%);
-  }
-
-  to {
-      border-right-color: transparent;
-  }
-}
 }
 
 body {
@@ -215,8 +196,8 @@ ul.show {
 }
 
 .vector-img-logo {
-  width: 60%;
-  border-radius: 50%;
+  width: 90%;
+  height: 80px;
 }
 
 #container-fluid {
